Update execution count to null and comment out API key print statement

--- a/email_agent.ipynb
+++ b/email_agent.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "c1745359",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
     "from crewai import LLM\n",
     "import os\n",
     "\n",
-    "print(os.environ.get(\"GEMINI_API_KEY\"))\n",
+    "# print(os.environ.get(\"GEMINI_API_KEY\"))\n",
     "\n",
     "llm = LLM(\n",
     "    model=\"gemini/gemini-2.0-flash\",\n",
